# evidence-gated-agent-memory

./: .gitignore  DIAGNOSTIC_EVALUATION.md  README.md  pyproject.toml
overleaf_paper/: icml2026.sty  main.tex  references.bib  validity_aware_memory_fmai2026_evidence_gated.tex
results/: evidence_gated_longmemeval_results.csv  full_context_comparison.csv  full_context_comparison.md  usable_results.csv
scripts/: analyze_official_mem0_token_savings.py  benchmark_official_mem0_reader_cache_free.py  check_mem0_vllm_budget.py  check_official_mem0_smoke.py  compile_boss_results.py  compile_evidence_gated_results.py  compile_stronger_results.py  compose_official_mem0_random_matched_route.py  compose_official_mem0_same_evidence_adaptive.py  compose_official_mem0_staleaware_gate.py  prepare_official_mem0_submission_checks.py  replay_longmemeval_answer_context.py  replay_official_mem0_topk.py  run_longmemeval_slice.sh  run_mem0_ablation_experiments.sh  run_mem0_ablation_locomo.sh  run_mem0_ablation_longmemeval.sh  run_official_mem0_package.sh  run_paper_experiments.sh  run_recovery_experiments.sh  run_recovery_locomo.sh  run_recovery_longmemeval.sh  run_stronger_results_package.sh  summarize_diagnostics.py  summarize_manifests.py  summarize_validity_slices.py
tests/: factories.py  test_ablation.py  test_baseline_presets.py  test_cli_entrypoint.py  test_compile_boss_results.py  test_compile_stronger_results.py  test_confusable_reasoner.py  test_consolidation_types.py  test_consolidator_v2.py  test_conversational_facts.py  test_conversational_salience.py  test_dataset_compiler.py  (+39 more)
(+156 files in other folders)
